salesforce/force-app/main/default/objects/Account/fields/Active_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Active_Supplier__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Approved supplier status; Drives ERP integration in Phase 2</description>
    <label>Active Supplier</label>
    <type>Checkbox</type>
</CustomField>