salesforce/force-app/main/default/objects/Account/fields/Analyst_Assigned_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Assigned_DateTime__c</fullName>
    <label>Analyst Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>