salesforce/force-app/main/default/objects/Account/fields/Annual_Spend_Est__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_Est__c</fullName>
    <label>Annual Spend (Est.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>