salesforce/force-app/main/default/objects/Account/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Suppliers Assigned</relationshipLabel>
    <relationshipName>Suppliers_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>