salesforce/force-app/main/default/objects/Account/fields/Cascading_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this supplier is flagged as &quot;Cascading Risk – Sub-Supplier Non-Compliance&quot;: their propagated risk score was driven above the cascade threshold by one or more non-compliant sub-suppliers. Distinct from direct non-compliance.</description>
    <label>Cascading Risk Flag</label>
    <type>Checkbox</type>
</CustomField>