salesforce/force-app/main/default/objects/Account/fields/Cascading_Risk_Last_Computed__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Last_Computed__c</fullName>
    <description>Timestamp tracking when the cascading risk logic last executed on this record.</description>
    <label>Cascading Risk Last Computed</label>
    <type>DateTime</type>
</CustomField>