salesforce/force-app/main/default/objects/Account/fields/Cascading_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Score__c</fullName>
    <description>Blended &quot;New Score&quot; (0-100): (Own Score x Own_Score_Weight__c) + (avg of relationship-weighted sub-supplier contributions x Sub_Supplier_Weight__c), computed bottom-up (Tier 3 first) by MultiTierRollupService. Distinct from Risk_Score__c (own score only) and from Cascading_Risk_Tier__c (worst-case severity bucket, a separate signal).</description>
    <label>Cascading Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>