salesforce/force-app/main/default/objects/Account/fields/Cascading_Risk_Source__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Source__c</fullName>
    <description>Comma-separated names of the sub-suppliers whose risk scores are at or above the cascade threshold, making this supplier&apos;s propagated score elevated. Provides full traceability from parent to originating non-compliant sub-supplier.</description>
    <label>Cascading Risk Source</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>