salesforce/force-app/main/default/objects/Account/fields/Cascading_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Tier__c</fullName>
    <description>worst tier across its whole sub-tree (self + all descendants)</description>
    <label>Cascading Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>