salesforce/force-app/main/default/objects/Account/fields/Case_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Analyst (User) who closed this supplier&apos;s compliance case via VendorPortalController.closeComplianceCase.</description>
    <label>Case Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Closed Compliance Cases</relationshipLabel>
    <relationshipName>Closed_Compliance_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>