salesforce/force-app/main/default/objects/Account/fields/Case_Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_DateTime__c</fullName>
    <description>When VendorPortalController.closeComplianceCase closed this supplier&apos;s compliance case. Null while Compliance_Case_Status__c = Open.</description>
    <label>Case Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>