salesforce/force-app/main/default/objects/Account/fields/Checklist_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Count__c</fullName>
    <description>Number of Compliance_Assessment__c checklist items this supplier had at the moment its checklist was first generated/persisted (ScopeCalloutQueueable or VendorPortalController.persistCuratedChecklist) — frozen at that point, not recalculated if items are added later. This is the N in RiskScoreService&apos;s per-document scoring (each Compliant document contributes +round(100/N), each Non-Compliant/Rejected contributes a severity-weighted negative share), so a document&apos;s point value stays stable even if the checklist is edited afterward.</description>
    <label>Checklist Item Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>