salesforce/force-app/main/default/objects/Account/fields/Closing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Closing_Remarks__c</fullName>
    <description>The Analyst&apos;s final note recorded when closing this supplier&apos;s compliance case (VendorPortalController.closeComplianceCase) — shown as the final remark on the Account page once the case is closed.</description>
    <label>Closing Remarks</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>