salesforce/force-app/main/default/objects/Account/fields/Compliance_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Case_Id__c</fullName>
    <description>The engine's agentic case thread id (LangGraph thread_id). Binds this supplier to its durable, checkpointed compliance case so the agent timeline and gates resume across sessions.</description>
    <label>Compliance Case Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>