salesforce/force-app/main/default/objects/Account/fields/Compliance_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Case_Status__c</fullName>
    <description>Whether this supplier&apos;s compliance case is still active or has been formally closed by an Analyst (VendorPortalController.closeComplianceCase). Distinct from Onboarding_Status__c, which tracks WHERE the account is in the onboarding pipeline (Draft/Screening/In Review) — this tracks whether the CASE itself is done. &apos;Open&apos; is the only value both getAnalystQueue and getScreeningQueue filter on to remove a case from both queues once closed.</description>
    <label>Compliance Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed - Compliant</fullName>
            </value>
            <value>
                <fullName>Closed - Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>