salesforce/force-app/main/default/objects/Account/fields/Compliance_Status_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status_Rollup__c</fullName>
    <description>Rollup from Compliance_Assessment__c; Rollup summary of compliance status</description>
    <label>Compliance Status Rollup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>