salesforce/force-app/main/default/objects/Account/fields/Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin__c</fullName>
    <description>Headquarters country (ISO-3166); Drives applicable rules</description>
    <label>Country of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>GB</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>JP</fullName>
                <label>Japan</label>
            </value>
            <value>
                <fullName>CN</fullName>
                <label>China</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>