salesforce/force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>Dun &amp; Bradstreet identifier</description>
    <externalId>true</externalId>
    <label>DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>