salesforce/force-app/main/default/objects/Account/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Material - Production (Tier 1)</fullName>
            </value>
            <value>
                <fullName>Direct Material - Production (Tier 2)</fullName>
            </value>
            <value>
                <fullName>Indirect / Non-production (MRO)</fullName>
            </value>
            <value>
                <fullName>Raw Materials / Commodities</fullName>
            </value>
            <value>
                <fullName>Services / Consulting</fullName>
            </value>
            <value>
                <fullName>Logistics / Distribution</fullName>
            </value>
            <value>
                <fullName>Capital Equipment / Tooling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>