salesforce/force-app/main/default/objects/Account/fields/ERP_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Vendor_ID__c</fullName>
    <description>Vendor ID from ERP after activation (Phase 2)</description>
    <externalId>true</externalId>
    <label>ERP Vendor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>