salesforce/force-app/main/default/objects/Account/fields/HITL_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HITL_Threshold__c</fullName>
    <description>Human-in-the-loop routing threshold set at intake. If the AI-computed Risk Tier is ABOVE this threshold, the supplier is routed to a human analyst instead of auto-proceeding.</description>
    <label>HITL Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>