salesforce/force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Manufacturing sub-vertical; Drives applicable rules</description>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Medical Devices</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>IT / Software</fullName>
            </value>
            <value>
                <fullName>Staffing / Labor</fullName>
            </value>
            <value>
                <fullName>Other Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>