salesforce/force-app/main/default/objects/Account/fields/Last_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Error__c</fullName>
    <description>Exact error from the most recent compliance-service callout (/scope or /assess). Blank = last call succeeded.</description>
    <label>Last Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>