salesforce/force-app/main/default/objects/Account/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>