salesforce/force-app/main/default/objects/Account/fields/Onboarding_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Completed_Date__c</fullName>
    <description>When supplier fully approved; Used for cycle-time metric</description>
    <label>Onboarding Completed Date</label>
    <type>Date</type>
</CustomField>