salesforce/force-app/main/default/objects/Account/fields/Onboarding_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Started_Date__c</fullName>
    <description>When onboarding workflow began</description>
    <label>Onboarding Started Date</label>
    <type>Date</type>
</CustomField>