salesforce/force-app/main/default/objects/Account/fields/Own_Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Own_Compliance_Score__c</fullName>
    <description>This supplier&apos;s own compliance score (0-100) based solely on their own document assessments, before any sub-supplier propagation is applied. Set by RiskPropagationService.</description>
    <label>Own Compliance Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>