salesforce/force-app/main/default/objects/Account/fields/Profile_Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Profile_Risk_Tier__c</fullName>
    <description>Frozen snapshot of the tier ScopeCalloutQueueable assigned at checklist-generation time, from industry/material/engagement profile alone — set once, never overwritten afterward. RiskScoreService reads this as the stable floor for its own recompute() so repeated recomputes don&apos;t compound against Risk_Tier__c, which RiskScoreService itself overwrites with its derived verdict.</description>
    <label>Profile Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>