salesforce/force-app/main/default/objects/Account/fields/Relationship_Type_To_Parent__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type_To_Parent__c</fullName>
    <description>How this supplier relates to its parent (Tier 1 / Tier 2) in the supply chain hierarchy. Drives the relationship weight multiplier in the risk propagation formula: Sole Source=1.5x, Preferred=1.0x, Secondary=0.8x.</description>
    <label>Relationship Type to Parent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
                <default>true</default>
                <label>Preferred</label>
            </value>
            <value>
                <fullName>Sole Source</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>