salesforce/force-app/main/default/objects/Account/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>