salesforce/force-app/main/default/objects/Account/fields/Risk_Domains__c.field-meta.xml
<CustomField>
    <fullName>Risk_Domains__c</fullName>
    <label>Risk Domains</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>