salesforce/force-app/main/default/objects/Account/fields/Risk_Last_Computed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Last_Computed__c</fullName>
    <description>When the Risk_Snapshot_JSON was last written. Shown on the dashboard so analysts know freshness.</description>
    <label>Risk Last Computed</label>
    <type>DateTime</type>
</CustomField>