salesforce/force-app/main/default/objects/Account/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Compliance risk score 0-100, whole number (0 = no risk / not yet screened, 100 = critical). Starts at 0 for a new supplier; moves only once documents are uploaded and assessed. Computed by RiskScoreService.</description>
    <label>Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>