salesforce/force-app/main/default/objects/Account/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <description>Risk tier derived from Risk_Score__c. Low: 0-24, Medium: 25-49, High: 50-74, Critical: 75-100.</description>
    <label>Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>