salesforce/force-app/main/default/objects/Account/fields/Stage_Entered_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_DateTime__c</fullName>
    <description>Timestamp the Account most recently entered its CURRENT Onboarding_Status__c value. Set by AccountTriggerHandler.beforeInsert (initial status) and beforeUpdate (whenever Onboarding_Status__c changes) — never set anywhere else. Distinct from CreatedDate (total time in the pipeline since the record existed at all): this is &quot;how long has it been stuck in the stage it&apos;s in right now,&quot; which CreatedDate cannot answer once a supplier has moved through more than one stage. Drives the &quot;days in this stage&quot; / stalled-case indicator in the Procurement (P2) and Analyst (A1) queues.</description>
    <label>Stage Entered DateTime</label>
    <type>DateTime</type>
</CustomField>