salesforce/force-app/main/default/objects/Account/fields/Sub_Tier_Supplier_Count__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tier_Supplier_Count__c</fullName>
    <label>Sub Tier Supplier Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>