salesforce/force-app/main/default/objects/Account/fields/Supplier_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Email__c</fullName>
    <description>Primary supplier contact email captured at intake. Used to send the required-document request from the Vendor Portal intake screen.</description>
    <label>Supplier Contact Email</label>
    <type>Email</type>
</CustomField>