salesforce/force-app/main/default/objects/Account/fields/Supplier_Portal_Token__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Portal_Token__c</fullName>
    <description>Used for appending supplier token in public url for supplier onboarding.</description>
    <label>Supplier Portal Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>