salesforce/force-app/main/default/objects/Account/fields/Tax_ID_EIN__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_EIN__c</fullName>
    <description>Federal Tax ID / EIN</description>
    <label>Tax ID / EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>