salesforce/force-app/main/default/objects/Account/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <description>Primary trigger field for compliance rule engine (matches matrix)</description>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All_Vendor_Types</fullName>
                <label>All Vendor Types</label>
            </value>
            <value>
                <fullName>Raw_Material_Supplier</fullName>
                <label>Raw Material Supplier</label>
            </value>
            <value>
                <fullName>Contract_Manufacturer</fullName>
                <label>Contract Manufacturer</label>
            </value>
            <value>
                <fullName>Logistics_3PL</fullName>
                <label>Logistics / 3PL</label>
            </value>
            <value>
                <fullName>IT_Software_Vendor</fullName>
                <label>IT / Software Vendor</label>
            </value>
            <value>
                <fullName>Staffing_Labor_Contractor</fullName>
                <label>Staffing / Labor Contractor</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>