salesforce/force-app/main/default/objects/Account/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Record Type used for all suppliers in the Compliance Platform</description>
    <label>Supplier</label>
</RecordType>