salesforce/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Onboarding_Started_Date__c</columns>
    <columns>Onboarding_Completed_Date__c</columns>
    <columns>Onboarding_Status__c</columns>
    <columns>Risk_Tier__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Supplier</value>
    </filters>
    <label>All Accounts</label>
</ListView>